--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,5 @@
     {% if site.analytics.provider and page.analytics != false %}
      | Analytics by {{ site.analytics.provider }}
     {% endif %}<br/>
-    Sun &amp; Ocean · <a href="https://sunocean.life">WWW.SUNOCEAN.LIFE</a>
+    Specinker · <a href="https://speclab.github.io">speclab.github.io</a>
 </footer>
