--- a/_includes/gitsrc.html
+++ b/_includes/gitsrc.html
@@ -1,1 +1,1 @@
-https://github.com/hawkhai/hawkhai.github.io/tree/master{{ include.url }}
+https://github.com/SpecLab/speclab.github.io/tree/master{{ include.url }}
