--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -83,8 +83,9 @@ img.domaintag.domaintag_gluon {
     line-height: $body-line-height;
 
     pre, code {
-        line-height: $base-line-height * 1.3 / 1.5;
-        margin-top: 0.1em;
+        line-height: $base-line-height * 1.25 / 1.5;
+        margin-top: 0.1em; // 会造成部分 code 段上下滑动异常。?
+        overflow-y: hidden;
     }
 
     font.ref_snapshot + ul {
